--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^2.4.1",
     "http-server": "^0.10.0",
     "ng2-bootstrap": "^1.6.3",
+    "ng2-select": "^1.2.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
